@@ -1,0 +1,11 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["copper-display-small"].subgroup = "circuit-visual"
+  data.raw.item["copper-display-medium"].subgroup = "circuit-visual"
+  data.raw.item["copper-display"].subgroup = "circuit-visual"
+  data.raw.item["iron-display-small"].subgroup = "circuit-visual"
+  data.raw.item["iron-display-medium"].subgroup = "circuit-visual"
+  data.raw.item["iron-display"].subgroup = "circuit-visual"
+  data.raw.item["steel-display-small"].subgroup = "circuit-visual"
+  data.raw.item["steel-display-medium"].subgroup = "circuit-visual"
+  data.raw.item["steel-display"].subgroup = "circuit-visual"
+end
